# NeuroSymbolicNavigation

./: .gitignore  Dockerfile.autoware_sim_vnc  Dockerfile.clingo  Dockerfile.osm-3d-pcd-pipeline  Dockerfile.semantic_slam  Dockerfile.semantic_slam_vnc  Dockerfile.slam  Dockerfile.slam_vnc  Dockerfile.vnc  Dockerfile.x11  README.md  robot.rviz  slam.launch.py  slam.yaml  start_vnc_object_detection.sh  start_vnc_ros.sh  turtlebot4_spawn.launch.py
CONVENIENT_SCRIPTS/macos/: 1build_docker_vnc.sh  2bringup_docker_vnc.sh
CONVENIENT_SCRIPTS/ubuntu/: 1build_docker_x11.sh  2bringup_docker_x11.sh
automotive/: get_map.py  ground_filter.py  map.yaml  play_ros_bag.sh  play_ros_bag_with_filter.sh  run_slam.sh  run_slam_with_filter.sh
hdmap/sample/: lanelet2_map.osm  map_config.yaml  map_projector_info.yaml
maze/: maze.pgm  maze.yaml
object_detection/: detect_and_draw.py  detect_and_publish.py  subscriber_only.py
object_detection/detectors/: base.py  my_detector.py  yolo11.py
object_detection/utils/: drawing.py
objects/construction_cone/: model.sdf
objects/fire_hydrant/: model.sdf
semantic_slam/src/semantic_slam/: package.xml  setup.py
semantic_slam/src/semantic_slam/launch/: semantic_slam.launch.py
semantic_slam/src/semantic_slam/semantic_slam/: semantic_slam_node.py
solver/: evalrl.py  game.py  instance.py  interface.py  learning.py  logic.py  map.lp  maze0_4.lp  maze0_4.m2.lp  maze0_4.pkl  pgm2asp-scale.py  pgm2asp.py  plot.py  program.lp  robot_motion.py  run.sh  solver.py  trainrl.py
urdf_models/: maze.sdf  oakd.urdf.xacro  rplidar.urdf.xacro
(+41 files in other folders)
