<?xml version="1.0"?>
<package format="3">
  <name>tb4_semantic_slam</name>
  <version>0.1.0</version>
  <description>Combined 2D–3D semantic SLAM for TurtleBot 4 with pluggable detectors.</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <!-- Optional: YOLO runtime (installed via pip) -->
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
